# TE-Agent

./: .gitignore  README.md  TE-Agent_streamlit.py  conftest.py  ct_agent.md  ct_agent_ui.py  jenkinsfile  main.py  merged_document.docx  requirements.txt  version.txt
agent/: __init__.py  nodes.py  nodes_v2.py  state.py  test_execute_agent.py
allure-results/: 01877a7b-c8a8-4998-be2b-00c205086636-attachment.json  102ea1eb-a334-4f4f-82bf-b1836fe279b0-attachment.txt  12c1b9dd-fe65-4eb9-a9b2-7102e801e595-attachment.txt  1d698fd6-64ec-4ac7-8453-e173703161c5-attachment.txt  283e996a-7a0f-4287-b7eb-6c55ece09143-container.json  2d7257da-7ef7-49b9-8e7f-9ace2d198bed-container.json  2ff95c3c-0b1a-431e-b604-65ee9e15d857-container.json  32abcab3-0d42-4087-a4cc-d3cc3964206a-attachment.json  43de32c4-d9ca-4b36-b48c-762be16b8095-container.json  48f1f70c-cbf0-46e0-9b36-4ea91787abc1-container.json  52fd0fac-363d-4270-b32e-90e6926c7984-result.json  7783186d-3df2-4237-9e13-1e27b8071bd6-container.json  7cda6768-9e01-4132-a87a-694dae18f5ed-attachment.txt  7ff99d30-0be3-4343-9c4d-ec0530a3dcc9-result.json  8395f22a-acf0-4c24-91a4-ded93fe68ade-result.json  85e5ff17-09fe-4ccb-aad1-be168d6be823-attachment.txt  9494b51c-b063-4287-bab9-97d46ebd2b69-attachment.txt  d60cbae1-012f-4265-8521-6a43e11bd8e3-attachment.json  e50ba02f-8de4-46e9-86ea-bfd5138ee5da-container.json  edb149ec-6893-407e-b057-f46aab3cf9ca-attachment.txt
config/: config.yaml  config_ct_agent.yml  config_manager.py
examples/StartedNode/: CMakeLists.txt
reports/: test_report.docx  test_report.html
sample/: full_process_start.sh  (+8 more)
(+46 files in other folders)
